briank-gitops/spaces/kw-jenkins-dev/jenkins/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: jenkins-route
  annotations:
    healthcheck.gslb.tanzu.vmware.com/service: jenkins
    healthcheck.gslb.tanzu.vmware.com/path: /
    healthcheck.gslb.tanzu.vmware.com/port: "8080"
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: default-gateway
    sectionName: http-jenkins-dev
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: jenkins
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
